feat: Implement responsive design, fix image input, and display employee name